# polymarket-arbitrage-bot

./: .env.example  AGENTS.md  ANALYSIS.md  PRD.md  README.md  pyproject.toml
docs/: LATENCY_ANALYSIS.md  PNL_INVESTIGATION_REPORT.md  TUNING_GUIDE.md
infra/: README.md
infra/ansible/: ansible.cfg
infra/ansible/group_vars/: all.yml.example
infra/ansible/inventory/: hosts.yml
infra/ansible/roles/bot/handlers/: main.yml
infra/opentofu/: main.tf  outputs.tf  variables.tf
scripts/: approve_usdc.py  check_positions.py  migrate_to_sqlite.py  sell_position.py
src/karb/: bot.py  cli.py  config.py
src/karb/api/: gamma.py  kalshi.py
src/karb/dashboard/: app.py
src/karb/dashboard/templates/: dashboard.html
src/karb/data/: __init__.py  database.py  repositories.py
src/karb/executor/: async_clob.py  executor.py  signer.py
src/karb/matcher/: __init__.py  event_matcher.py  llm_matcher.py
src/karb/scanner/: crossplatform_scanner.py  realtime_scanner.py
src/karb/tracking/: portfolio.py  trades.py
src/rarb/: bot.py  cli.py  config.py
src/rarb/analyzer/: arbitrage.py
src/rarb/api/: gamma.py  models.py
src/rarb/dashboard/: app.py
src/rarb/dashboard/templates/: dashboard.html
src/rarb/data/: database.py  repositories.py
src/rarb/executor/: async_clob.py  executor.py  merge.py
src/rarb/market_maker/: __init__.py  bot.py  inventory.py  orders.py  quotes.py  state.py  types.py
src/rarb/notifications/: __init__.py  slack.py  telegram.py
src/rarb/scanner/: realtime_scanner.py
src/rarb/tracking/: portfolio.py
tests/: test_trade_tracking.py
(+6 files in other folders)
